--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,3 +16,5 @@ export(makeBinaryPaths)
 export(pruneTree)
 export(readTrees)
 export(tree2Paths)
+export(plotRers)
+export(plotTreeHighlightBranches)
