--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,6 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
-Depends: RColorBrewer, gplots,  phytools, geiger, knitr, Rcpp, RcppArmadillo
+Depends: RColorBrewer, gplots,  phytools, geiger, knitr, Rcpp, RcppArmadillo, weights, phangorn
 Imports: Rcpp (>= 0.11.0), ape
 LinkingTo: Rcpp, RcppArmadillo, ape
