Export enrichment functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,18 +4,20 @@ export(char2Paths)
 export(correlateWithBinaryPhenotype)
 export(correlateWithContinuousPhenotype)
 export(edgeVars)
+export(fastwilcoxGMTall)
 export(foreground2Paths)
 export(foreground2Tree)
 export(getAllCor)
 export(getAllResiduals)
+export(getStat)
 export(makeBinaryPaths)
 export(namePathsWSpecies)
 export(plotRers)
 export(plotTreeHighlightBranches)
 export(pruneTree)
+export(read.gmt)
 export(readTrees)
 export(tree2Paths)
 import(Rcpp)
 importFrom(Rcpp,evalCpp)
 useDynLib(RERconverge)
-
