Roxygenize permulation functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,13 +6,16 @@ export(correlateWithBinaryPhenotype)
 export(correlateWithContinuousPhenotype)
 export(edgeVars)
 export(fastwilcoxGMTall)
+export(fixPseudoroot)
 export(foreground2Paths)
 export(foreground2Tree)
 export(getAllCor)
 export(getAllResiduals)
+export(getPerms)
 export(getStat)
 export(makeBinaryPaths)
 export(namePathsWSpecies)
+export(permpvalenrich)
 export(plotRers)
 export(plotTreeHighlightBranches)
 export(pruneTree)
