Return RER trees as newick strings

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(plotTreeHighlightBranches)
 export(pruneTree)
 export(read.gmt)
 export(readTrees)
+export(returnRersAsNewickStrings)
 export(returnRersAsTree)
 export(tree2Paths)
 import(Rcpp)
