--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,7 +23,10 @@ export(read.gmt)
 export(readTrees)
 export(returnRersAsNewickStrings)
 export(returnRersAsTree)
+export(returnRersAsTreesAll)
 export(tree2Paths)
+export(treePlotNew)
+export(treePlotRers)
 import(Rcpp)
 importFrom(Rcpp,evalCpp)
 useDynLib(RERconverge)
