Roxygenized changes with tree estimation
Added tree estimation function and modified documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(click_select_foreground_branches)
 export(correlateWithBinaryPhenotype)
 export(correlateWithContinuousPhenotype)
 export(edgeVars)
+export(estimatePhangornTree)
 export(fastwilcoxGMTall)
 export(fixPseudoroot)
 export(foreground2Paths)
