Adding build of new functions
Re-built with wrapper for estimating trees

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(correlateWithBinaryPhenotype)
 export(correlateWithContinuousPhenotype)
 export(edgeVars)
 export(estimatePhangornTree)
+export(estimatePhangornTreeAll)
 export(fastwilcoxGMTall)
 export(fixPseudoroot)
 export(foreground2Paths)
