Continuous Permulation Functions
Tidied continuous permulation functions and wrote permulation vignette.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(char2Paths)
 export(click_select_foreground_branches)
+export(combinePermData)
 export(correlateWithBinaryPhenotype)
 export(correlateWithContinuousPhenotype)
 export(edgeVars)
@@ -11,10 +12,11 @@ export(foreground2Paths)
 export(foreground2Tree)
 export(getAllCor)
 export(getAllResiduals)
-export(getPerms)
+export(getPermsContinuous)
 export(getStat)
 export(makeBinaryPaths)
 export(namePathsWSpecies)
+export(permpvalcor)
 export(permpvalenrich)
 export(plotRers)
 export(plotTreeHighlightBranches)
