Update Permulation Functions
Added functionality to calculate permulation enrichment statistics using already-calculated gene correlation permulation statistics.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(foreground2Paths)
 export(foreground2Tree)
 export(getAllCor)
 export(getAllResiduals)
+export(getEnrichPermsContinuous)
 export(getPermsContinuous)
 export(getStat)
 export(makeBinaryPaths)
