Fix for foreground2TreeClades and tree2PathsClades
Wrote wrapper functions for modified foreground2Tree and tree2Paths that account for foreground relationships

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(generatePermulatedBinPhenSSMBatched)
 export(getAllCor)
 export(getAllResiduals)
 export(getEnrichPermsContinuous)
+export(getForegroundInfoClades)
 export(getPermsBinary)
 export(getPermsContinuous)
 export(getStat)
@@ -39,7 +40,7 @@ export(returnRersAsTreesAll)
 export(simBinPhenoCC)
 export(simBinPhenoSSM)
 export(tree2Paths)
-export(tree2Paths_map)
+export(tree2PathsClades)
 export(treePlotNew)
 export(treePlotRers)
 import(Rcpp)
