--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,7 +19,7 @@ export(generatePermulatedBinPhen)
 export(generatePermulatedBinPhenSSMBatched)
 export(getAllCor)
 export(getAllResiduals)
-export(getEnrichPermsContinuous)
+export(getEnrichPerms)
 export(getForegroundInfoClades)
 export(getPermsBinary)
 export(getPermsContinuous)
@@ -29,6 +29,7 @@ export(matchAllNodesClades)
 export(namePathsWSpecies)
 export(permpvalcor)
 export(permpvalenrich)
+export(permutevec)
 export(plotRers)
 export(plotTreeHighlightBranches)
 export(pruneTree)
@@ -37,8 +38,12 @@ export(readTrees)
 export(returnRersAsNewickStrings)
 export(returnRersAsTree)
 export(returnRersAsTreesAll)
+export(simBinPheno)
 export(simBinPhenoCC)
 export(simBinPhenoSSM)
+export(simBinPhenoVec)
+export(simpermvec)
+export(simulatevec)
 export(tree2Paths)
 export(tree2PathsClades)
 export(treePlotNew)
