--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(namePathsWSpecies)
 export(permpvalcor)
 export(permpvalenrich)
 export(permutevec)
+export(plotPositivesFromPermulations)
 export(plotRers)
 export(plotTreeHighlightBranches)
 export(pruneTree)
