running roxygenize for new functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,12 @@ export(adaptivePermulation)
 export(calculateCorPermuted)
 export(calculatePermulatedPaths_apply)
 export(char2Paths)
+export(char2PathsCategorical)
+export(char2TreeCategorical)
 export(click_select_foreground_branches)
 export(combinePermData)
 export(correlateWithBinaryPhenotype)
+export(correlateWithCategoricalPhenotype)
 export(correlateWithContinuousPhenotype)
 export(edgeVars)
 export(estimatePhangornTree)
