roxygenized for new functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(permpvalenrich)
 export(permutevec)
 export(plotPositivesFromPermulations)
 export(plotRers)
+export(plotTreeCategorical)
 export(plotTreeHighlightBranches)
 export(pruneTree)
 export(read.gmt)
