--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(getAllCor)
 export(getAllCorExtantOnly)
 export(getAllResiduals)
 export(getAncLiks)
+export(getAncStates)
 export(getEnrichPerms)
 export(getForegroundInfoClades)
 export(getLRnullDistribution)
@@ -37,7 +38,6 @@ export(getMatrixFromAbbr)
 export(getPermsBinary)
 export(getPermsContinuous)
 export(getStat)
-export(getStates)
 export(makeBinaryPaths)
 export(matchAllNodesClades)
 export(namePathsWSpecies)
