--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,7 +29,6 @@ export(getAllCor)
 export(getAllCorExtantOnly)
 export(getAllResiduals)
 export(getAncLiks)
-export(getAncStates)
 export(getEnrichPerms)
 export(getForegroundInfoClades)
 export(getLRnullDistribution)
@@ -38,6 +37,7 @@ export(getMatrixFromAbbr)
 export(getPermsBinary)
 export(getPermsContinuous)
 export(getStat)
+export(getStatesAtNodes)
 export(makeBinaryPaths)
 export(matchAllNodesClades)
 export(namePathsWSpecies)
