roxygenized to add new function/update documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(getPermsBinary)
 export(getPermsContinuous)
 export(getStat)
 export(getStatesAtNodes)
+export(getStatesFromPhenTree)
 export(makeBinaryPaths)
 export(matchAllNodesClades)
 export(namePathsWSpecies)
