--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(getAllCor)
 export(getAllCorExtantOnly)
 export(getAllResiduals)
 export(getAncLiks)
+export(getBinaryPermulationInputsFromTree)
 export(getEnrichPerms)
 export(getForegroundInfoClades)
 export(getLRnullDistribution)
