roxygenized for the new permulations functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(asymmRerootingMethod)
 export(boxPlotTest)
 export(calculateCorPermuted)
 export(calculatePermulatedPaths_apply)
+export(categoricalPermulations)
 export(char2Paths)
 export(char2PathsCategorical)
 export(char2TreeCategorical)
@@ -30,13 +31,17 @@ export(getAllCorExtantOnly)
 export(getAllResiduals)
 export(getAncLiks)
 export(getBinaryPermulationInputsFromTree)
+export(getEnrichPermPvals)
 export(getEnrichPerms)
+export(getEnrichPermsCategorical)
 export(getForegroundInfoClades)
 export(getLRnullDistribution)
 export(getLikelihoodRatio)
 export(getMatrixFromAbbr)
+export(getPermPvalsCategorical)
 export(getPermsBinary)
 export(getPermsContinuous)
+export(getRealEnrichments)
 export(getStat)
 export(getStatesAtNodes)
 export(getStatesFromPhenTree)
