roxygenized for the new functions added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,7 +40,9 @@ export(getLikelihoodRatio)
 export(getMatrixFromAbbr)
 export(getPermPvalsCategorical)
 export(getPermsBinary)
+export(getPermsBinaryExtantOnly)
 export(getPermsContinuous)
+export(getPermsContinuousExtantOnly)
 export(getRealEnrichments)
 export(getStat)
 export(getStatesAtNodes)
