--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ export(returnRersAsTreesAll)
 export(searchRateModels)
 export(simBinPheno)
 export(simBinPhenoCC)
+export(simBinPhenoCCmidpoint)
 export(simBinPhenoRank)
 export(simBinPhenoSSM)
 export(simBinPhenoVec)
