Fixed imports and made html docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(estimatePhangornTreeAll)
 export(fastwilcoxGMTall)
 export(filterByCriteria)
 export(fixPseudoroot)
+export(flat_to_ij)
 export(foreground2Paths)
 export(foreground2Tree)
 export(foreground2TreeClades)
@@ -29,8 +30,10 @@ export(generatePermulatedBinPhenSSMBatched)
 export(getAllCor)
 export(getAllCorExtantOnly)
 export(getAllResiduals)
+export(getAllResiduals2)
 export(getAncLiks)
 export(getBinaryPermulationInputsFromTree)
+export(getDepthOrder)
 export(getEnrichPermPvals)
 export(getEnrichPerms)
 export(getEnrichPermsCategorical)
@@ -43,11 +46,13 @@ export(getPermsBinary)
 export(getPermsBinaryExtantOnly)
 export(getPermsContinuous)
 export(getPermsContinuousExtantOnly)
+export(getRMat)
 export(getRealEnrichments)
 export(getStat)
 export(getStatesAtNodes)
 export(getStatesFromPhenTree)
 export(makeBinaryPaths)
+export(mapIndex)
 export(matchAllNodesClades)
 export(namePathsWSpecies)
 export(permpvalcor)
@@ -57,9 +62,11 @@ export(plotPositivesFromPermulations)
 export(plotRers)
 export(plotTreeCategorical)
 export(plotTreeHighlightBranches)
+export(plotWithCor)
 export(pruneTree)
 export(read.gmt)
 export(readTrees)
+export(readTrees2)
 export(returnRersAsNewickStrings)
 export(returnRersAsTree)
 export(returnRersAsTreesAll)
@@ -72,6 +79,7 @@ export(simBinPhenoSSM)
 export(simBinPhenoVec)
 export(simpermvec)
 export(simulatevec)
+export(transformPaths)
 export(tree2Paths)
 export(tree2PathsClades)
 export(treePlotNew)
