Attempted to update the documentation for revised functions that incorporate new changes to allow 'transition' argument to be either "unidirectional" (default) or "bidirectional" within permulation functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(getMatrixFromAbbr)
 export(getPermPvalsCategorical)
 export(getPermsBinary)
 export(getPermsBinaryExtantOnly)
+export(getPermsBinaryFudged)
 export(getPermsContinuous)
 export(getPermsContinuousExtantOnly)
 export(getRealEnrichments)
